# Inference-Backend

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose-build.yml  docker-compose-linux.yml  docker-compose-windows.yml  docker-compose.yml  opencv.Dockerfile  pyproject.toml
.github/workflows/: docker-image.yml
cfg/: CAM01_Cfg_V1.00.R02.000749N8.10010.140300.0020000_202511061002.cfg  CAM02_Cfg_V1.00.R02.000749N8.10010.140300.0020000_202511061003.cfg
conf/: config.toml  roi_selector.py
model/: best.xml  best.xml.enc
src/: config.py  infer.py  ipc.py  main.py  models.py  roi_config.json  roi_config.py  roi_selector.py  stream.py  utils.py
test/: predict.py
