[project]
name = "inference-server"
version = "0.1.0"
requires-python = "==3.13.*"
dependencies = [
    "openvino",
    "cryptography",
    "fastapi[standard]",
    "opencv-python-headless @ file:///app/wheel/opencv_python_headless-4.12.0.88-cp313-cp313-linux_x86_64.whl"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = ["ruff"]